--- a/package.json
+++ b/package.json
@@ -1,1 +1,25 @@
-{}
+{
+  "name": "reddit-scraper",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://"
+  },
+  "author": "",
+
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "cheerio": "^0.22.0",
+    "express": "^4.14.0",
+    "express-handlebars": "^3.0.0",
+    "mongoose": "^4.6.5",
+    "morgan": "^1.7.0",
+    "request": "^2.76.0"
+  }
+}
