--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://"
+    "url": "git+https://https://github.com/elenastaylor/Reddit-Scraper"
   },
   "author": "",
 
